--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ async function loadMap() {
     document.getElementById('guess-input').focus();
   });
 }
+         }).addTo(map);
 
 
 // 🟩 SUBMIT button handler — NOT inside give-up!
