--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@ async function loadMap() {
 }
          }).addTo(map);
 
+    }); // ✅ this line was missing — closes .then(data => { ... })
+}       // ✅ this line was missing — closes loadMap()
 
 // 🟩 SUBMIT button handler — NOT inside give-up!
 document.getElementById('submit-guess').onclick = async function () {
