--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@ async function loadGuessedSegmentIds() {
 }
 
 async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
-  const ids = roadNameToIds[roadName] || [];
+ const normalized = normalizeName(roadName);
+const ids = roadNameToIds[normalized] || [];
+
 
   for (const id of ids) {
     const stringId = String(id);
