--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   );
 
   import { roadNameToIds } from './roadNameToIds.js';
+  console.log("Loaded roadNameToIds:", Object.keys(roadNameToIds));
   const map = L.map('map', { zoomControl: false }).setView([40.09, -76.3], 12);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   maxZoom: 19
