--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@ async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
         road_name: normalized,
         correct: isCorrect,
         used_hint: usedHint
+        console.log("Checking segment", stringId, {
+  alreadyInMemory: !!existing,
+  isCorrect,
+  usedHint
+});
+
       }]);
       if (error) {
   console.error("❌ Supabase insert error:", error);
