--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@ console.log("📍 Segment IDs found:", segmentIds);
 
 
 
-  await saveGuessSegmentIds(segmentIds, isCorrect, usedHint);
+  console.log("🧪 About to save guess:", segmentIds, typeof segmentIds);
+await saveGuessSegmentIds(segmentIds, isCorrect, usedHint);
+
 
   document.getElementById('feedback-message').innerText = isCorrect ? 'Correct!' : 'Incorrect';
   setTimeout(() => {
