--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ console.log("📍 Segment IDs found:", segmentIds);
 
 
   console.log("🧪 About to save guess:", segmentIds, typeof segmentIds);
-await saveGuessSegmentIds(correctName, isCorrect, usedHint);
+await saveGuessSegmentIds(segmentIds, isCorrect, usedHint);
 
 
 
