--- a/index.html
+++ b/index.html
@@ -440,6 +440,42 @@ if (attemptCounts[currentRoad.id] >= 4 && !currentRoad.hintGiven) {
     currentRoad = null;
   }, hideDelay);
 };
+  document.getElementById('give-up').onclick = async function () {
+  if (!currentRoad) return;
+
+  const correctName = currentRoad.name.trim();
+  const normalizedCorrect = normalizeName(correctName);
+  const normalizedKey = Object.keys(roadNameToIds).find(
+    k => normalizeName(k) === normalizedCorrect
+  );
+  const segmentIds = roadNameToIds[normalizedKey];
+
+  // Track attempt
+  currentRoad.attempts += 1;
+
+  // If 4th attempt → show hint, mark orange, save to Supabase
+  if (currentRoad.attempts >= 4 && !currentRoad.hintGiven) {
+    currentRoad.hintGiven = true;
+    for (const layer of nameToLayers[normalizedKey] || []) {
+      layer.setStyle({ color: 'orange', weight: 6 });
+    }
+    await saveGuessSegmentIds(segmentIds, false, true); // Save as incorrect with hint
+    alert(`Correct answer: ${correctName}`);
+    document.getElementById('guess-modal').style.display = 'none';
+    document.getElementById('feedback-message').innerText = '';
+    currentRoad = null;
+    return;
+  }
+
+  // Otherwise, mark red (not saved), allow future attempts
+  for (const layer of nameToLayers[normalizedKey] || []) {
+    layer.setStyle({ color: 'red', weight: 6 });
+  }
+
+  document.getElementById('guess-modal').style.display = 'none';
+  document.getElementById('feedback-message').innerText = '';
+};
+
 loadMap();
 
   document.getElementById('guess-input').addEventListener('keypress', function (e) {
